--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cogo-toast": "^4.1.1",
+    "jsoneditor": "^7.2.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-modal": "^3.11.1",
