--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "3.2.0",
     "react-switch": "^5.0.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "solr-admin-client": "https://github.com/beautifulsearch/solr-admin-client"
   },
   "scripts": {
     "start": "react-scripts start",
