--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jsoneditor": "^7.2.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-json-view": "^1.19.1",
     "react-modal": "^3.11.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
