--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "cogo-toast": "^4.1.1",
     "jsoneditor": "^7.2.1",
     "react": "^16.10.2",
